tests/baselines/reference/multivar(strict=true).errors.txt
multivar.ts(6,16): error TS7005: Variable 'a' implicitly has an 'any' type.
multivar.ts(6,19): error TS2395: Individual declarations in merged declaration 'b2' must be all exported or all local.
multivar.ts(6,36): error TS7005: Variable 'b' implicitly has an 'any' type.
multivar.ts(12,22): error TS7006: Parameter 'b' implicitly has an 'any' type.
multivar.ts(17,22): error TS7006: Parameter 'b' implicitly has an 'any' type.
multivar.ts(21,17): error TS7005: Variable 'd1' implicitly has an 'any' type.
multivar.ts(21,21): error TS7005: Variable 'd2' implicitly has an 'any' type.
multivar.ts(22,9): error TS2395: Individual declarations in merged declaration 'b2' must be all exported or all local.
multivar.ts(24,17): error TS7005: Variable 'v1' implicitly has an 'any' type.
multivar.ts(31,13): error TS7005: Variable 'da1' implicitly has an 'any' type.
multivar.ts(31,18): error TS7005: Variable 'da2' implicitly has an 'any' type.
multivar.ts(33,13): error TS7005: Variable 'dv1' implicitly has an 'any' type.
multivar.ts(38,14): error TS7006: Parameter 'a2' implicitly has an 'any' type.


==== multivar.ts (13 errors) ====
    var a,b,c;
    var x=1,y=2,z=3;
    
    module m2 {
    
        export var a, b2: number = 10, b;
                   ~
!!! error TS7005: Variable 'a' implicitly has an 'any' type.
                      ~~
!!! error TS2395: Individual declarations in merged declaration 'b2' must be all exported or all local.
                                       ~
!!! error TS7005: Variable 'b' implicitly has an 'any' type.
        var m1;
        var a2, b22: number = 10, b222;
        var m3;
    
        class C {
            constructor (public b) {
                         ~~~~~~~~
!!! error TS7006: Parameter 'b' implicitly has an 'any' type.
            }
        }
    
        export class C2 {
            constructor (public b) {
                         ~~~~~~~~
!!! error TS7006: Parameter 'b' implicitly has an 'any' type.
            }
        }
        var m;
        declare var d1, d2;
                    ~~
!!! error TS7005: Variable 'd1' implicitly has an 'any' type.
                        ~~
!!! error TS7005: Variable 'd2' implicitly has an 'any' type.
        var b2;
            ~~
!!! error TS2395: Individual declarations in merged declaration 'b2' must be all exported or all local.
    
        declare var v1;
                    ~~
!!! error TS7005: Variable 'v1' implicitly has an 'any' type.
    }
    
    var d;
    var a22, b22 = 10, c22 = 30, dn;
    var nn;
    
    declare var da1, da2;
                ~~~
!!! error TS7005: Variable 'da1' implicitly has an 'any' type.
                     ~~~
!!! error TS7005: Variable 'da2' implicitly has an 'any' type.
    var normalVar;
    declare var dv1;
                ~~~
!!! error TS7005: Variable 'dv1' implicitly has an 'any' type.
    var xl;
    var x3;
    var z4;
    
    function foo(a2) {
                 ~~
!!! error TS7006: Parameter 'a2' implicitly has an 'any' type.
        var a = 10;
    }
    
    
    for (var i = 0; i < 30; i++) {
        i++;
    }
    var b5 = 10;